index.html : changed title app.css : added class for white text app.js : added class for white text

--- a/chatbot-website/src/App.css
+++ b/chatbot-website/src/App.css
@@ -95,7 +95,13 @@ body {
 }
 .blue-bg {
   background: #579ffb;
+
 }
+
+.white-text {
+  color: white;
+}
+
 .msg-info {
   display: flex;
   justify-content: space-between;
